Выполнена главная страница index.html

--- a/index.html
+++ b/index.html
@@ -240,8 +240,7 @@
 		<footer>
 			<div class="container footerTop">
 				<div class="brand">
-					<img src="images/index/h_01_logo.png" alt="logo">
-					<a href="#">BRAN<span>D</span></a>
+					<a href="#"><img src="images/index/h_01_logo.png" alt="logo">BRAN<span>D</span></a>
 					<p>Objectively transition extensive data rather than cross functional solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array of processes and cross-unit partnerships.
 					<br>
 					<br> 
@@ -272,7 +271,18 @@
 					<a href="#">Brows All</a>
 				</div>
 			</div>
-			<div class="footerBot"></div>
+			<div class="footerBot">
+				<div class="container footBotContainer">
+					<p>&copy;2017  Brand  All Rights Reserved.</p>
+					<div class="toils">
+						<div class="footerToils"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+						<div class="footerToils toilsTwit"><a href="#"><i class="fab fa-twitter"></i></a></div>
+						<div class="footerToils"><a href="#"><i class="fab fa-linkedin-in"></i></a></div>
+						<div class="footerToils"><a href="#"><i class="fab fa-pinterest-p"></i></a></div>
+						<div class="footerToils"><a href="#"><i class="fab fa-google-plus-g"></i></a></div>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</body>
 </html>
