--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -38,5 +38,190 @@
 			<a href="#">Featured</a>                
 			<a href="#">Hot Deals</a> 
 		</nav>
+		<div class="arrivals">
+			<div class="container arrivalsCont">
+				<span>New Arrivals</span>
+				<div class="arrivalsLinks">
+					<a href="#">Home /</a>
+					<a href="#">Men /</a>
+					<a class="activ" href="#">New Arrivals</a>
+				</div>
+			</div>
+		</div>
+		<div class="container arrivalsProduct">
+			<div class="productDetails">
+				<span>Product Details</span>
+				<div class="prodCategor">
+					<span>unite price</span>
+					<span>Quantity</span>
+					<span>shipping</span>
+					<span>Subtotal</span>
+					<span>Action</span>
+				</div>
+			</div>
+			<section class="mangoOne">
+				<div class="peopleOne">
+					<img src="images/shopping_cart/Layer_01.jpg" alt="menOne">
+					<div class="peopleTxt">
+						<h4>Mango  People  T-shirt</h4>
+						<span class="peopleSpanOne">Color: </span><span class="peopleSpanTwo"> Red</span><br>
+						<span class="peopleSpanOne">Size:</span><span class="peopleSpanTwo"> Xll</span>
+					</div>
+				</div>
+				<div class="shirtOne">
+					<div class="uni"><span>$150</span></div>
+					<div class="qua"><input type="text" placeholder="2"></div>
+					<div class="ship"><span>FREE</span></div>
+					<div class="sub"><span>$300</span></div>
+					<div class="act"><span><i class="fas fa-times-circle"></i></span></div>
+				</div>
+			</section>
+			<section class="mangoTwo">
+				<div class="peopleTwo">
+					<img src="images/shopping_cart/Layer_02.jpg" alt="menTwo">
+					<div class="peopleTxt">
+						<h4>Mango  People  T-shirt</h4>
+						<span class="peopleSpanOne">Color: </span><span class="peopleSpanTwo"> Red</span><br>
+						<span class="peopleSpanOne">Size:</span><span class="peopleSpanTwo"> Xll</span>
+					</div>
+				</div>
+				<div class="shirtTwo">
+					<div class="uni"><span>$150</span></div>
+					<div class="qua"><input type="text" placeholder="2"></div>
+					<div class="ship"><span>FREE</span></div>
+					<div class="sub"><span>$300</span></div>
+					<div class="act"><span><i class="fas fa-times-circle"></i></span></div>
+				</div>
+			</section>
+			<section class="mangoThree">
+				<div class="peopleThree">
+					<img src="images/shopping_cart/Layer_03.jpg" alt="menThree">
+					<div class="peopleTxt">
+						<h4>Mango  People  T-shirt</h4>
+						<span class="peopleSpanOne">Color: </span><span class="peopleSpanTwo"> Red</span><br>
+						<span class="peopleSpanOne">Size:</span><span class="peopleSpanTwo"> Xll</span>
+					</div>
+				</div>
+				<div class="shirtThree">
+					<div class="uni"><span>$150</span></div>
+					<div class="qua"><input type="text" placeholder="2"></div>
+					<div class="ship"><span>FREE</span></div>
+					<div class="sub"><span>$300</span></div>
+					<div class="act"><span><i class="fas fa-times-circle"></i></span></div>
+				</div>
+			</section>
+			<div class="shopCart">
+				<div class="clearShop">
+					<span>CLEAR SHOPPING CART</span>
+				</div>
+				<div class="contShop">
+					<span>CONTINUE SHOPPING</span>
+				</div>
+			</div>
+			<div class="containerForm">
+				<div class="adress">
+					<form class="adressOne" action="#">
+						<legend>Shipping Adress</legend>
+						<select required name="#" id="">
+							<option value="bangladesh">Bangladesh</option>
+							<option value="russia">Russia</option>
+							<option value="china">China</option>
+							<option value="indonesia">Indonesia</option>
+						</select>
+						<input required type="text" placeholder="State">
+						<input required type="number" placeholder="Postcode / Zip">
+						<button>get a quote</button>
+					</form>
+				</div>
+				<div class="discount">
+					<form class="discountOne" action="#">
+						<legend>coupon  discount</legend>
+						<label for="state">Enter your coupon code if you have one</label>
+						<input type="text" id="state" placeholder="State">
+						<button>Apply coupon</button>
+				</div>
+				<div class="total">
+					<div class="subTtl">
+						<span>Sub total  $900</span><br>
+						<span class="grand">GRAND TOTAL<span class="grdTtl">$900</span></span>
+					</div>
+					<button>proceed to checkout</button>
+				</div>
+			</div>
+		</div>
+		<section class="subscribe">
+			<div class="container subscribeWrip">
+				<div class="burhan">
+					<img class="imgBurhan" src="images/index/s_18.png" alt="burhan">
+					<div class="burhanTxt">
+						<p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</p>
+						<h4 class="bin">Bin Burhan</h4>
+						<span class="dhaka">Dhaka, Bd</span><br>
+						<div class="bdr1"></div>
+						<div class="brd2"></div>
+						<div class="brd3"></div>
+					</div>
+				</div>
+				<div class="subTxt">
+					<h3>Subscribe</h3>
+					<h4>FOR OUR NEWLETTER AND PROMOTION</h4>
+					<div class="subForm">
+						<input type="text" placeholder="Enter Your Email">
+						<button>Subscribe</button>
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer>
+			<div class="container footerTop">
+				<div class="brand">
+					<a href="#"><img src="images/index/h_01_logo.png" alt="logo">BRAN<span>D</span></a>
+					<p>Objectively transition extensive data rather than cross functional solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array of processes and cross-unit partnerships.
+					<br>
+					<br> 
+					Efficiently plagiarize 24/365 action items and focused infomediaries. Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
+				</div>
+				<div class="company">
+					<h5>COMPANY</h5>
+					<a href="#">Home</a> 
+					<a href="#">Shop</a>
+					<a href="#">About</a>
+					<a href="#">How It Works</a>
+					<a href="#">Contact</a>
+				</div>
+				<div class="info">
+					<h5>INFORMATION</h5>
+					<a href="#">Tearms & Condition</a>
+					<a href="#">Privacy Policy</a>
+					<a href="#">How to Buy</a>
+					<a href="#">How to Sell</a>
+					<a href="#">Promotion</a>
+				</div>
+				<div class="shop">
+					<h5>SHOP CATEGORY</h5>
+					<a href="#">Men</a>
+					<a href="#">Women</a>
+					<a href="#">Child</a>
+					<a href="#">Apparel</a>
+					<a href="#">Brows All</a>
+				</div>
+			</div>
+			<div class="footerBot">
+				<div class="container footBotContainer">
+					<p>&copy;2017  Brand  All Rights Reserved.</p>
+					<div class="toils">
+						<div class="footerToils"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
+						<div class="footerToils toilsTwit"><a href="#"><i class="fab fa-twitter"></i></a></div>
+						<div class="footerToils"><a href="#"><i class="fab fa-linkedin-in"></i></a></div>
+						<div class="footerToils"><a href="#"><i class="fab fa-pinterest-p"></i></a></div>
+						<div class="footerToils"><a href="#"><i class="fab fa-google-plus-g"></i></a></div>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
+
+
+
+	
