--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -52,11 +52,11 @@
 			<div class="productDetails">
 				<span>Product Details</span>
 				<div class="prodCategor">
-					<span>unite price</span>
-					<span>Quantity</span>
-					<span>shipping</span>
-					<span>Subtotal</span>
-					<span>Action</span>
+					<span class="categor1">unite price</span>
+					<span class="categor2">Quantity</span>
+					<span class="categor3">shipping</span>
+					<span class="categor4">Subtotal</span>
+					<span class="categor5">Action</span>
 				</div>
 			</div>
 			<section class="mangoOne">
@@ -121,8 +121,8 @@
 			<div class="containerForm">
 				<div class="adress">
 					<form class="adressOne" action="#">
-						<legend>Shipping Adress</legend>
-						<select required name="#" id="">
+						<h4>Shipping Adress</h4>
+						<select name="#" id="#">
 							<option value="bangladesh">Bangladesh</option>
 							<option value="russia">Russia</option>
 							<option value="china">China</option>
@@ -135,10 +135,11 @@
 				</div>
 				<div class="discount">
 					<form class="discountOne" action="#">
-						<legend>coupon  discount</legend>
+						<h4>coupon  discount</h4>
 						<label for="state">Enter your coupon code if you have one</label>
 						<input type="text" id="state" placeholder="State">
 						<button>Apply coupon</button>
+					</form>
 				</div>
 				<div class="total">
 					<div class="subTtl">
@@ -157,7 +158,7 @@
 						<p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</p>
 						<h4 class="bin">Bin Burhan</h4>
 						<span class="dhaka">Dhaka, Bd</span><br>
-						<div class="bdr1"></div>
+						<div class="brd1"></div>
 						<div class="brd2"></div>
 						<div class="brd3"></div>
 					</div>
@@ -165,10 +166,10 @@
 				<div class="subTxt">
 					<h3>Subscribe</h3>
 					<h4>FOR OUR NEWLETTER AND PROMOTION</h4>
-					<div class="subForm">
+					<form class="subForm">
 						<input type="text" placeholder="Enter Your Email">
 						<button>Subscribe</button>
-					</div>
+					</form>
 				</div>
 			</div>
 		</section>
@@ -211,7 +212,7 @@
 					<p>&copy;2017  Brand  All Rights Reserved.</p>
 					<div class="toils">
 						<div class="footerToils"><a href="#"><i class="fab fa-facebook-f"></i></a></div>
-						<div class="footerToils toilsTwit"><a href="#"><i class="fab fa-twitter"></i></a></div>
+						<div class="footerToils"><a href="#"><i class="fab fa-twitter"></i></a></div>
 						<div class="footerToils"><a href="#"><i class="fab fa-linkedin-in"></i></a></div>
 						<div class="footerToils"><a href="#"><i class="fab fa-pinterest-p"></i></a></div>
 						<div class="footerToils"><a href="#"><i class="fab fa-google-plus-g"></i></a></div>
