Внесены исправления в index.html и style.css

--- a/index.html
+++ b/index.html
@@ -38,44 +38,44 @@
 			<a href="#">Featured</a>                
 			<a href="#">Hot Deals</a> 
 		</nav>
-		<section class="top">
+		<div class="top">
 			<div class="container secTopCont">
 				<div class="secTopBrand">
 					<h1>THE BRAND</h1>
 					<h2>OF LUXERIOUS <span>FASHION</span></h2>
 				</div>
 			</div>
-		</section>
-		<section class="container mainContTop">
-			<div class="imgOne">
+		</div>
+		<div class="container mainContTop">
+			<section class="imgOne">
 				<img src="images/index/s_02.jpg" alt="men">
 				<div class="imgCont">
 					<h4>HOT DEAL</h4>
 					<h3>FOR MEN</h3>
 				</div>
-			</div>
-			<div>
+			</section>
+			<section class="imgTwo">
 				<img src="images/index/s_03.jpg" alt="accesories">
 				<div class="imgCont">
 					<h4>LUXIROUS &amp; TRENDY</h4>
 					<h3>ACCESORIES</h3>
 				</div>
-			</div>
-			<div class="imgThree">
+			</section>
+			<section class="imgThree">
 				<img src="images/index/s_04.jpg" alt="women">
 				<div class="imgCont">
 					<h4>30% OFFER</h4>
 					<h3>WOMEN</h3>
 				</div>
-			</div>
-			<div class="imgFour">
+			</section>
+			<section class="imgFour">
 				<img src="images/index/s_05.jpg" alt="kids">
 				<div class="imgCont">
 					<h4>NEW ARRIVALS</h4>
 					<h3>FOR KIDS</h3>
 				</div>
-			</div>
-		</section>
+			</section>
+		</div>
 		<h3 class="sectionItem">Fetured Items</h3>
 		<p class="sectionText">Shop for items based on what we featured in this week</p>
 		<section class="container mainContMiddle">
@@ -213,7 +213,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="subscribe">
+		<div class="subscribe">
 			<div class="container subscribeWrip">
 				<div class="burhan">
 					<img class="imgBurhan" src="images/index/s_18.png" alt="burhan">
@@ -221,7 +221,7 @@
 						<p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum a. Aliquam condimentum mattis neque sed pretium”</p>
 						<h4 class="bin">Bin Burhan</h4>
 						<span class="dhaka">Dhaka, Bd</span><br>
-						<div class="bdr1"></div>
+						<div class="brd1"></div>
 						<div class="brd2"></div>
 						<div class="brd3"></div>
 					</div>
@@ -236,7 +236,7 @@
 				</div>
 				
 			</div>
-		</section>
+		</div>
 		<footer>
 			<div class="container footerTop">
 				<div class="brand">
