--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -41,11 +41,11 @@
 		<div class="arrivals">
 			<div class="container arrivalsCont">
 				<span>New Arrivals</span>
-				<div class="arrivalsLinks">
+				<nav class="arrivalsLinks">
 					<a href="#">Home /</a>
 					<a href="#">Men /</a>
 					<a class="activ" href="#">New Arrivals</a>
-				</div>
+				</nav>
 			</div>
 		</div>
 		<div class="container arrivalsProduct">
@@ -150,7 +150,7 @@
 				</div>
 			</div>
 		</div>
-		<section class="subscribe">
+		<div class="subscribe">
 			<div class="container subscribeWrip">
 				<div class="burhan">
 					<img class="imgBurhan" src="images/index/s_18.png" alt="burhan">
@@ -172,7 +172,7 @@
 					</form>
 				</div>
 			</div>
-		</section>
+		</div>
 		<footer>
 			<div class="container footerTop">
 				<div class="brand">
@@ -182,30 +182,30 @@
 					<br> 
 					Efficiently plagiarize 24/365 action items and focused infomediaries. Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
 				</div>
-				<div class="company">
+				<section class="company">
 					<h5>COMPANY</h5>
 					<a href="#">Home</a> 
 					<a href="#">Shop</a>
 					<a href="#">About</a>
 					<a href="#">How It Works</a>
 					<a href="#">Contact</a>
-				</div>
-				<div class="info">
+				</section>
+				<section class="info">
 					<h5>INFORMATION</h5>
 					<a href="#">Tearms & Condition</a>
 					<a href="#">Privacy Policy</a>
 					<a href="#">How to Buy</a>
 					<a href="#">How to Sell</a>
 					<a href="#">Promotion</a>
-				</div>
-				<div class="shop">
+				</section>
+				<section class="shop">
 					<h5>SHOP CATEGORY</h5>
 					<a href="#">Men</a>
 					<a href="#">Women</a>
 					<a href="#">Child</a>
 					<a href="#">Apparel</a>
 					<a href="#">Brows All</a>
-				</div>
+				</section>
 			</div>
 			<div class="footerBot">
 				<div class="container footBotContainer">
