--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 		</div>
 		<h3 class="sectionItem">Fetured Items</h3>
 		<p class="sectionText">Shop for items based on what we featured in this week</p>
-		<section class="container mainContMiddle">
-			<div class="blockMiddle">
+		<div class="container mainContMiddle">
+			<section class="blockMiddle">
 				<div class="imgMiddle">
 					<div class="imgBackground">
 						<button>
@@ -90,8 +90,8 @@
 					<img class="imgPeople" src="images/index/s_06.jpg" alt="people_1">
 				</div>
 				<h5 class="txtMiddle">Mango  People  T-shirt<br><span>$52.00</span></h5>
-			</div>
-			<div class="blockMiddle">
+			</section>
+			<section class="blockMiddle">
 				<div class="imgMiddle">
 					<div class="imgBackground">
 						<button>
@@ -102,8 +102,8 @@
 					<img class="imgPeople" src="images/index/s_07.jpg" alt="people_2">
 				</div>
 				<h5 class="txtMiddle">Mango  People  T-shirt<br><span>$52.00</span></h5>
-			</div>
-			<div class="blockMiddle">
+			</section>
+			<section class="blockMiddle">
 				<div class="imgMiddle">
 					<div class="imgBackground">
 						<button>
@@ -114,8 +114,8 @@
 					<img class="imgPeople" src="images/index/s_08.jpg" alt="people_3">
 				</div>
 				<h5 class="txtMiddle">Mango  People  T-shirt<br><span>$52.00</span></h5>
-			</div>
-			<div class="blockMiddle">
+			</section>
+			<section class="blockMiddle">
 				<div class="imgMiddle">
 					<div class="imgBackground">
 						<button>
@@ -126,8 +126,8 @@
 					<img class="imgPeople" src="images/index/s_09.jpg" alt="people_4">
 				</div>
 				<h5 class="txtMiddle">Mango  People  T-shirt<br><span>$52.00</span></h5>
-			</div>
-			<div class="blockMiddle">
+			</section>
+			<section class="blockMiddle">
 				<div class="imgMiddle">
 					<div class="imgBackground">
 						<button>
@@ -138,8 +138,8 @@
 					<img class="imgPeople" src="images/index/s_10.jpg" alt="people_5">
 				</div>
 				<h5 class="txtMiddle">Mango  People  T-shirt<br><span>$52.00</span></h5>
-			</div>
-			<div class="blockMiddle">
+			</section>
+			<section class="blockMiddle">
 				<div class="imgMiddle">
 					<div class="imgBackground">
 						<button>
@@ -150,8 +150,8 @@
 					<img class="imgPeople" src="images/index/s_11.jpg" alt="people_6">
 				</div>
 				<h5 class="txtMiddle">Mango  People  T-shirt<br><span>$52.00</span></h5>
-			</div>
-			<div class="blockMiddle">
+			</section>
+			<section class="blockMiddle">
 				<div class="imgMiddle">
 					<div class="imgBackground">
 						<button>
@@ -162,8 +162,8 @@
 					<img class="imgPeople" src="images/index/s_12.jpg" alt="people_7">
 				</div>
 				<h5 class="txtMiddle">Mango  People  T-shirt<br><span>$52.00</span></h5>
-			</div >
-			<div class="blockMiddle">
+			</section>
+			<section class="blockMiddle">
 				<div class="imgMiddle">
 					<div class="imgBackground">
 						<button>
@@ -174,15 +174,15 @@
 					<img class="imgPeople" src="images/index/s_13.jpg" alt="people_8">
 				</div>
 				<h5 class="txtMiddle">Mango  People  T-shirt<br><span>$52.00</span></h5>
-			</div>
+			</section>
 			<div class="middleBut">
 				<button class="middleBrowse">
 				<span>Browse All Product</span>
 				<i class="fas fa-long-arrow-alt-right"></i>
 			</button>
 			</div>
-		</section>
-		<section class="container mainContBottom">
+		</div>
+		<div class="container mainContBottom">
 			<div class="contBotLeft">
 				<div class="secBotOffer">
 					<h2>30%<span>OFFER</span></h2>
@@ -190,29 +190,29 @@
 				</div>
 			</div>
 			<div class="contBotRight">
-				<div class="botRightTop">
+				<section class="botRightTop">
 					<img src="images/index/s_15.svg" alt="delivery">
 					<div class="wripTxt">
 						<h4>Free Delivery</h4>
 						<p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
 					</div>
-				</div>
-				<div class="botRightMiddle">
+				</section>
+				<section class="botRightMiddle">
 					<img src="images/index/s_16.svg" alt="discounts">
 					<div class="wripTxt">
 						<h4>Sales & discounts</h4>
 						<p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
 					</div>
-				</div>
-				<div class="botRightBottom">
+				</section>
+				<section class="botRightBottom">
 					<img src="images/index/s_17.svg" alt="quality">
 					<div class="wripTxt">
 						<h4>Quality assurance</h4>
 						<p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
 					</div>
-				</div>
+				</section>
 			</div>
-		</section>
+		</div>
 		<div class="subscribe">
 			<div class="container subscribeWrip">
 				<div class="burhan">
@@ -246,30 +246,30 @@
 					<br> 
 					Efficiently plagiarize 24/365 action items and focused infomediaries. Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
 				</div>
-				<div class="company">
+				<section class="company">
 					<h5>COMPANY</h5>
 					<a href="#">Home</a> 
 					<a href="#">Shop</a>
 					<a href="#">About</a>
 					<a href="#">How It Works</a>
 					<a href="#">Contact</a>
-				</div>
-				<div class="info">
+				</section>
+				<section class="info">
 					<h5>INFORMATION</h5>
 					<a href="#">Tearms & Condition</a>
 					<a href="#">Privacy Policy</a>
 					<a href="#">How to Buy</a>
 					<a href="#">How to Sell</a>
 					<a href="#">Promotion</a>
-				</div>
-				<div class="shop">
+				</section>
+				<section class="shop">
 					<h5>SHOP CATEGORY</h5>
 					<a href="#">Men</a>
 					<a href="#">Women</a>
 					<a href="#">Child</a>
 					<a href="#">Apparel</a>
 					<a href="#">Brows All</a>
-				</div>
+				</section>
 			</div>
 			<div class="footerBot">
 				<div class="container footBotContainer">
